# web-agent

./: .env.example  .gitignore  README.md  client.rest  package.json  pnpm-lock.yaml  tsconfig.json
.devcontainer/: devcontainer.json  docker-compose.yml
prisma/: client.ts  schema.prisma
prisma/migrations/20251102162510_add_pgvector/: migration.sql
prisma/migrations/20251109040729/: migration.sql
prisma/migrations/20251121181418/: migration.sql
python/: README.md  extract_entities.py  pyproject.toml  zero_shot_test.py
src/config/: envs.ts  logger.ts  ollama.ts
src/ingest/: index.ts  text.ts
src/mastra/: index.ts
src/mastra/agents/: astronomer-agent.ts  category-discovery-agent.ts  journalist-agent.ts
src/mastra/tools/: category-discovery-tool.ts  category-tool.ts  fetch-content-tool.ts  web-category-tool.ts  web-tool.ts
src/preprocessing/blogger/: parallel-ingest.ts  secuential-ingest.ts  secuential.ts  types.ts  worker-blog-processor.ts
src/preprocessing/text/: index.ts
src/rag/: rag-section-processor.ts
src/scraping/: domain-scraper.ts
src/scraping/data/blog/: fotmat.json
src/scraping/formatters/: html-formatter.ts  text-separator-formatter.ts
src/scraping/save/: save-html.ts  save-text.ts
src/utils/: call-model.ts  extract-categories.ts  extract-entities.ts  generate-chunk-id.ts  generate-csv.ts  slug-to-title.ts  split-text-smart.ts
