[project]
name = "python"
version = "0.1.0"
description = "Python environment for NLP tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=6.33.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.8",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
